[gd_scene load_steps=6 format=3 uid="uid://b0mcy1x4mvpbh"]

[ext_resource type="Script" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Table_key_field_selection_input.gd" id="1_ukfat"]
[ext_resource type="PackedScene" uid="uid://b0x40ln8a6syy" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Label_Template.tscn" id="2_6a0mc"]
[ext_resource type="PackedScene" uid="uid://caa8n4gw1ppk5" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/DropDown_Template.tscn" id="3_uc8hq"]
[ext_resource type="PackedScene" uid="uid://civbxt4nfyill" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/ItemType_Selection.tscn" id="4_t745l"]
[ext_resource type="PackedScene" uid="uid://cw2c256dbf611" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Navigation_Scenes/Navigation_Button.tscn" id="6_aiv1r"]

[node name="TableKeyField_Input" type="VBoxContainer"]
custom_minimum_size = Vector2(500, 175)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ukfat")

[node name="Label" parent="." instance=ExtResource("2_6a0mc")]
layout_mode = 2
size_flags_vertical = 0

[node name="Label_Button" parent="Label/HBox1" index="0"]
self_modulate = Color(0.43, 0.45, 0.55, 1)

[node name="Hide_Button" parent="Label/HBox1" index="1"]
self_modulate = Color(0.43, 0.45, 0.55, 1)

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 2
color = Color(0.105882, 0.105882, 0.105882, 1)

[node name="Input" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Input_Label_Template" parent="Input" instance=ExtResource("2_6a0mc")]
visible = false
layout_mode = 2
size_flags_vertical = 1

[node name="Label_Button" parent="Input/Input_Label_Template/HBox1" index="0"]
self_modulate = Color(0.43, 0.45, 0.55, 1)
button_text = "Fart Data Display"

[node name="Hide_Button" parent="Input/Input_Label_Template/HBox1" index="1"]
self_modulate = Color(0.43, 0.45, 0.55, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="Input"]
layout_mode = 2

[node name="DisplayTypeSelection" parent="Input/HBoxContainer" instance=ExtResource("3_uc8hq")]
layout_mode = 2
selection_table_name = "DisplaySelection"
label_text = "Select Display Field"
is_label_button = false

[node name="Input" parent="Input/HBoxContainer/DisplayTypeSelection" index="1"]
item_count = 3
selected = 0
popup/item_0/text = "Field Value"
popup/item_0/id = 0
popup/item_1/text = "Key Name"
popup/item_1/id = 1
popup/item_2/text = "Table Name"
popup/item_2/id = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Input"]
layout_mode = 2

[node name="TableDataSelections" type="HBoxContainer" parent="Input/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TableSelection" parent="Input/HBoxContainer2/TableDataSelections" instance=ExtResource("4_t745l")]
layout_mode = 2
label_text = "Table"
is_label_button = false

[node name="KeySelection" parent="Input/HBoxContainer2/TableDataSelections" instance=ExtResource("4_t745l")]
layout_mode = 2
label_text = "Key"
is_label_button = false

[node name="FieldSelection" parent="Input/HBoxContainer2/TableDataSelections" instance=ExtResource("4_t745l")]
layout_mode = 2
label_text = "Field"
is_label_button = false

[node name="ScrollContainer" type="ScrollContainer" parent="Input"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Input/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox2" type="HBoxContainer" parent="Input"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="Accept" parent="Input/HBox2" groups=["Table Action"] instance=ExtResource("6_aiv1r")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
size_flags_horizontal = 3
button_text = "Accept"
auto_connect_signals = false
auto_set_minimum_size = false

[node name="Cancel" parent="Input/HBox2" groups=["Table Action"] instance=ExtResource("6_aiv1r")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
size_flags_horizontal = 3
button_text = "Cancel"
auto_connect_signals = false
auto_set_minimum_size = false

[connection signal="input_selection_changed" from="Input/HBoxContainer/DisplayTypeSelection" to="." method="_on_displayTypeSelection_changed"]
[connection signal="input_selection_changed" from="Input/HBoxContainer2/TableDataSelections/TableSelection" to="." method="_on_table_selection_input_changed"]
[connection signal="input_selection_changed" from="Input/HBoxContainer2/TableDataSelections/KeySelection" to="." method="_on_key_selection_input_changed"]
[connection signal="button_up" from="Input/HBox2/Cancel" to="." method="_on_cancel_button_up"]

[editable path="Label"]
[editable path="Input/Input_Label_Template"]
[editable path="Input/HBoxContainer/DisplayTypeSelection"]
